Week5-Redmine-Oefening/redmine-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redmine-ingress
  namespace: redmine-app
  annotations: 
    cert-manager.io/cluster-issuer: cluster-issuer
spec:
  tls:
  - hosts:
    - support.75.co.ucll.cloud
    secretName: redmine-tls
  rules:
    - host: support.75.co.ucll.cloud
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: redmine
                port:
                  number: 80
